<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/width_5_160"
        android:layout_marginTop="@dimen/width_5_160"
        android:background="@color/transparent"
        android:src="@drawable/menu_icon" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/person_icon" />

    <TextView
        android:id="@+id/shopname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/height_1_160"
        android:text="@string/shopname" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_2_160"
        android:layout_marginTop="@dimen/height_2_160"
        android:background="@color/little_gray" />

    <RadioGroup
        android:id="@+id/shop_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/hotproduct_radiobtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/hotproduct" 
            android:textColor="@color/red"/>

        <RadioButton
            android:id="@+id/classfylist_radiobtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/classfylist" />

        <RadioButton
            android:id="@+id/createproduct_radiobtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/createproduct" />
    </RadioGroup>

    <!-- <ImageView
        android:id="@+id/direct_line_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent"
        android:src="@drawable/direct_lineone" />
 -->
   <!--  <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" /> -->
<android.support.v4.view.ViewPager 
 android:id="@+id/viewPager" 
 android:layout_width="fill_parent" 
 android:layout_height="fill_parent" >
 </android.support.v4.view.ViewPager>
</LinearLayout>